@@ -65,7 +65,7 @@ This is the module to be checked. If it represents a path name
 is assumed to be the exact file to read. Otherwise, if a module is
 identified by its plain module name, the correspondant file (either
 SMIv1/2 or SMIng) is searched along a path, which is initialized by
-the \fBSMIPATH\fP environment variable or by @prefix@/lib/smi if
+the \fBSMIPATH\fP environment variable or by /usr/local/lib/smi if
 \fBSMIPATH\fP is not set. Files with a \fB.sming\fP extension are
 expected to be SMIng module files. Files with a \fB.my\fP or without
 any extension are expected to be SMIv1/v2 module files.
