@@ -1,0 +1,53 @@
+.\"
+.\" $Id$
+.\"
+.TH smiquery 1  "June 1, 1999" "IBR" "SMI Tools"
+.SH NAME
+smiquery \- query single information from SMI MIB modules
+.SH SYNOPSIS
+.B smiquery
+[
+.B "-Vh"
+]
+.I command name
+.SH DESCRIPTION
+The \fBsmiquery\fP program is used to query information on a single
+item from an MIB module, e.g. module meta information or a single type
+definition.
+.SH OPTIONS
+.TP
+.B "-V"
+Show the smidump version and exit.
+.TP
+.B "-h"
+Show a help text and exit.
+.TP
+.BI "-p " module
+Preload the module \fImodule\fP before reading the main module. This may
+be helpful if an incomplete main module misses to import some definitions.
+.TP
+.I command name
+This specifies the kind of information to retrieve (module, imports,
+revisions, node, parent, compliance, index, members, children, type, or
+macro) and the item to retrieve.
+.PP
+The module in question is searched along a path, which is initialized by
+the \fBSMIPATH\fP environment variable or by /usr/local/lib/smi if
+\fBSMIPATH\fP is not set. Files with a \fB.sming\fP extension are
+expected to be SMIng module files. Files with a \fB.my\fP or without
+any extension are expected to be SMIv1/v2 module files.
+.SH "EXAMPLE"
+This example queries the members of the group ifTestGroup from the
+IF-MIB module.
+.nf
+
+  $ smiquery members IF-MIB.ifTestGroup
+.fi
+.SH "SEE ALSO"
+The SMIng and
+.BR libsmi (3)
+project is documented at
+.BR "http://www.ibr.cs.tu-bs.de/projects/sming/" "."
+.SH "AUTHOR"
+(C) 1999 Frank Strauss, TU Braunschweig, Germany <strauss@ibr.cs.tu-bs.de>
+.br
